[gd_scene load_steps=2 format=3 uid="uid://dycfsfrmn601a"]

[ext_resource type="Script" uid="uid://cfgu6pnrwggcd" path="res://ui/lobby_menu.gd" id="1"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Join Game"

[node name="StartButton" type="Button" parent="Center/VBox"]
layout_mode = 2
disabled = true
text = "Start"

[node name="Status" type="Label" parent="Center/VBox"]
layout_mode = 2

[node name="Players" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Players: 1"
